[package]
name = "jamfest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# main game dependencies
bevy = "0.8"
heron = { version = "4.0.0", features = ["2d"] }
rand = "0.8"

# microphone input dependency
portaudio = { version = "0.7.0", optional = true }

# async runtime dependencies
futures = { version = "0.3.21", optional = true }
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"], optional = true }

# websocket dependencies
http = { version = "0.2.6", optional = true }
tokio-tungstenite = { version = "0.15.0", features = ["native-tls"], optional = true }
tungstenite = { version = "0.14.0", optional = true }

# utility dependencies
crossbeam-channel = { version = "0.5.4", optional = true }

[features]
default = []
dynamic = ["bevy/dynamic"]
deepgram = ["portaudio", "futures", "tokio", "http", "tokio-tungstenite", "tungstenite", "crossbeam-channel"]
