[package]
name = "jamfest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# main game dependencies
bevy = "0.8"
heron = { version = "4.0.0", features = ["2d"] }
rand = "0.8"

# microphone input dependencies
fon = { version = "0.5", optional = true }
pasts = { version = "0.7", optional = true }
wavy = { version = "0.9.1", optional = true }

# async runtime dependencies
futures = { version = "0.3.21", optional = true }
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread"], optional = true }

# websocket dependencies
wasm-sockets = { version = "0.2.2", optional = true }

# utility dependencies
crossbeam-channel = { version = "0.5.4", optional = true }

[features]
default = ["deepgram"]
dynamic = ["bevy/dynamic"]
deepgram = ["fon", "pasts", "wavy", "futures", "crossbeam-channel", "wasm-sockets"]
