[package]
name = "jamfest"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# main game dependencies
bevy = "0.8"
heron = { version = "4.0.0", features = ["2d"] }
rand = "0.8"

# microphone input dependencies
fon = { version = "0.5", optional = true }
pasts = { version = "0.7", optional = true }
wavy = { version = "0.9.1", optional = true }

# websocket dependencies
js-sys = { version = "0.3.60", optional = true }
serde-wasm-bindgen = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.83", optional = true }
web-sys = { version = "0.3", optional = true, features = ["MessageEvent", "WebSocket"] }

# utility dependencies
crossbeam-channel = { version = "0.5.4", optional = true }

[features]
default = ["deepgram"]
dynamic = ["bevy/dynamic"]
deepgram = [
  "crossbeam-channel",
  "fon",
  "js-sys",
  "pasts",
  "serde-wasm-bindgen",
  "wasm-bindgen",
  "wavy",
  "web-sys",
]
